force-app/main/default/objects/Jira_Project__c/Jira_Project__c.object-meta.xml
<CustomObject>
    <label>Jira Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>