force-app/main/default/objects/Jira_Project__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>