force-app/main/default/objects/Jira_Project__c/fields/Erp_Billed__c.field-meta.xml
<CustomField>
    <fullName>Erp_Billed__c</fullName>
    <label>Erp Billed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>