force-app/main/default/objects/Jira_Project__c/fields/Erp_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Erp_Estimate__c</fullName>
    <label>Erp Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>