force-app/main/default/objects/Jira_Project__c/fields/Imp_Health__c.field-meta.xml
<CustomField>
    <fullName>Imp_Health__c</fullName>
    <label>Imp Health</label>
    <length>500</length>
    <type>Html</type>
</CustomField>