force-app/main/default/objects/Jira_Project__c/fields/Percent_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Consumed__c</fullName>
    <formula>Erp_Billed__c / Erp_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>