force-app/main/default/objects/Jira_Project__c/fields/PM_Health__c.field-meta.xml
<CustomField>
    <fullName>PM_Health__c</fullName>
    <label>PM Health</label>
    <length>500</length>
    <type>Html</type>
</CustomField>