force-app/main/default/objects/Jira_Project__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>